--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/cypress run",
+    "test-headed":"./node_modules/.bin/cypress run --headed",
+    "test-chrome":"./node_modules/.bin/cypress run --headed --browser=chrome",
+    "test-dashboard":"./node_modules/.bin/cypress run --record --key 992f69ba-ef7c-407b-a762-143ab7d21401",
     "merge": "mochawesome-marge cypress/reports/*.json > cypress/reports/output.json",
     "generate_mochawesome_report": "marge cypress/reports/output.json --reportDir ./ --inline"
   },
